# grnti-text-classifier

./: .dockerignore  .dvcignore  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Makefile  README.md  README.ru.md  coverage.json  docker-compose.yml  dvc.yaml  index.html  mkdocs.yml  model_card.md.j2  objects.inv  params.yaml  pyproject.toml  requirements.txt
.github/workflows/: docker.yml  docs.yml  lint.yml  release.yml  test.yml
api/: index.html
architecture/: index.html
baseline/: dataset.csv
baseline/notebooks/: training.ipynb
bert/: dataset.csv
bert/notebooks/: export_tflite.ipynb  training.ipynb
configs/: config.yaml  train.yaml
configs/data/: default.yaml
configs/experiment/: baseline.yaml
configs/model/: baseline.yaml  default.yaml  main.yaml
data/raw/: .gitignore  test.jsonl.dvc  train.jsonl.dvc
data/sample/: sample.jsonl
data/widget/: sample_payload.json
docker/: patch_pyproject.py
docs/: api.md  architecture.md  index.md  model_card.md.j2  serving.md  training.md
notebooks/: 01_eda.ipynb  02_demo.ipynb
scripts/: build_sample_data.py  export_hf_native.py  make_plots.py  publish_to_hf.py  sync_data.sh  train_all.py
search/: search_index.json
serving/: index.html
src/grnti_text_classifier/: __init__.py  __main__.py
src/grnti_text_classifier/data/: __init__.py  datamodule.py  dataset.py  grnti.py  prepare.py  transforms.py
src/grnti_text_classifier/evaluation/: __init__.py  confusion.py  evaluate.py  metrics.py  report.py
src/grnti_text_classifier/inference/: predict.py
src/grnti_text_classifier/models/: __init__.py  factory.py  lightning_module.py
src/grnti_text_classifier/serving/: dependencies.py  main.py  routes.py  schemas.py
src/grnti_text_classifier/training/: optuna_sweep.py  train.py
src/grnti_text_classifier/utils/: logging.py
tests/: test_data.py  test_datamodule.py  test_evaluation.py  test_inference.py  test_model.py  test_models.py  test_serving.py  test_sync_data.py  test_training.py
training/: index.html
