[project]
name = "grnti_text_classifier"
version = "0.1.0"
description = "Production-grade Russian multi-class text classifier (GRNTI)."
requires-python = ">=3.12"
authors = [
  { name = "Daniil Kiselyov", email = "your-email@example.com" },
]
license = { text = "MIT" }
readme = "README.md"

dependencies = [
  "hydra-core>=1.3.2",
  "omegaconf>=2.3.0",
  "pyyaml>=6.0.1",
  "structlog>=24.1.0",
  "rich>=13.7.0",
  "jinja2>=3.1.0",
  "numpy>=1.26.0",
  "torch>=2.5,<2.7",
  "torchvision>=0.17.0",
  "lightning>=2.5,<2.6",
  "torchmetrics>=1.3.0",
  "transformers>=4.46,<4.47",
  "tokenizers>=0.20,<0.22",
  "datasets>=3.0,<4.0",
  "sentencepiece>=0.2,<0.3",
  "safetensors>=0.4,<1.0",
  "accelerate>=1.0,<2.0",
  "optuna>=4.0,<5.0",
  "scikit-learn>=1.5,<2.0",
  "pandas>=2.2,<3.0",
  "pyarrow>=18,<19",
  "matplotlib>=3.9,<4.0",
  "seaborn>=0.13,<1.0",
]

[dependency-groups]
dev = [
  "ruff==0.15.10",
  "mypy==1.20.1",
  "pytest>=8.3,<9.0",
  "pytest-cov>=6.0",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "pre-commit==4.*",
  "deptry==0.25.1",
  "bandit[toml]==1.9.4",
  "interrogate==1.7.0",
  "codespell==2.4.2",
  "pandas-stubs",
  "types-PyYAML",
  "nbqa>=1.8.0",
  "nbstripout>=0.9.1",
  "ipykernel>=6.29.0",
]
serving = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.6.0",
  "python-multipart>=0.0.9",
  "prometheus-fastapi-instrumentator>=7.0.0",
  "huggingface-hub>=0.22.0",
"pillow>=10.2.0",
]
tracking = [
  "mlflow>=2.11.0",
  "dvc>=3.48.0",
  "wandb>=0.16.0",
]
docs = [
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grnti_text_classifier"]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["notebooks/*.ipynb", "outputs", "mlruns"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N806", "E501"]
"src/grnti_text_classifier/serving/routes.py" = ["B008"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["transformers.*", "datasets.*", "sentencepiece.*", "lightning.*",
          "torchmetrics.*", "optuna.*", "sklearn.*", "matplotlib.*", "seaborn.*",
          "structlog.*", "torch.*", "huggingface_hub.*", "jinja2.*", "torchvision.*",
          "mlflow.*", "dvc.*", "wandb.*", "hydra.*", "omegaconf.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "grnti_text_classifier.serving.*",
    "grnti_text_classifier.data.datamodule",
    "grnti_text_classifier.data.dataset",
    "grnti_text_classifier.models.lightning_module",
    "grnti_text_classifier.utils.hf_hub",
    "grnti_text_classifier.training.train",
]
ignore_errors = true
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src --cov-report=term --cov-report=xml --cov-fail-under=10"
markers = ["slow: tests that take >10s to run"]

[tool.coverage.run]
source = ["src/grnti_text_classifier"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]

[tool.bandit]
exclude_dirs = ["tests", "notebooks", "data", "artifacts"]
# B101: assert_used (pytest convention)
# B311: random — used only for non-security shuffling/sampling
# B614: pytorch_load — we load only our own trained checkpoints
# B615: huggingface_unsafe_download — we download only our own / trusted HF repos
# B701: jinja2_autoescape_false — templates render Markdown/YAML, not HTML
skips = ["B101", "B311", "B614", "B615", "B701"]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-private = false
ignore-nested-functions = true
ignore-module = false
fail-under = 30
exclude = ["tests", "notebooks", "outputs", "mlruns", "docs", "build", "setup.py"]
verbose = 1
color = true

[tool.deptry]
extend_exclude = ["notebooks", "tests"]
known_first_party = ["grnti_text_classifier"]
# DEP001-DEP004: CLI tools, optional groups, and transitive deps not directly imported
ignore = ["DEP001", "DEP002", "DEP003", "DEP004"]

[tool.codespell]
skip = "uv.lock,*.ipynb,notebooks,outputs,mlruns,*.lock,data,site"
ignore-words-list = "te,nd,fo"

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
